--- a/src/main.html
+++ b/src/main.html
@@ -4,7 +4,11 @@
     <link rel="stylesheet" type="text/css" href="main.css">
   </head>
   <body>
-    <h1>Brasileirão</h1>
+    <div>
+      <h1>Brasileirão</h1>
+      <p>Encontre estatísticas e dados do seu time do coração a cada ano.</p>
+    </div>
+
     <form id="form">
         <div class="inputItem">
           <label for="year">Ano:</label>
@@ -12,8 +16,8 @@
         </div>
 
         <div class="inputItem">
-          <label for="team">Time:</label>
-          <select id="teamFilter" name="Time"></select>
+          <label for="team">Clube:</label>
+          <select id="teamFilter" name="Clube"></select>
         </div>
 
       <button type="submit">Procurar</button>
