--- a/src/main.html
+++ b/src/main.html
@@ -83,11 +83,11 @@
         </div>
         <div class="container">
           <div style="display: flex; justify-content: flex-start; flex-direction: column; align-items: flex-start;">
-            <p class="resultWinsAdversary1" style="margin-bottom: 8px;">Vitórias Vasco: </p>            
-            <p class="resultWinsAdversary2" style="margin-bottom: 8px;">Vitórias Flamengo: </p>            
-            <p class="resultTies" style="margin-bottom: 8px;">Empates: </p>            
-            <p class="resultGoalsAdversary1" style="margin-bottom: 8px;">Gols Vasco: </p>            
-            <p class="resultGoalsAdversary2">Gols Flamengo: 12</p>            
+            <p class="resultWinsAdversary1" style="margin-bottom: 12px;"></p>            
+            <p class="resultWinsAdversary2" style="margin-bottom: 12px;"></p>            
+            <p class="resultTies" style="margin-bottom: 12px;"></p>            
+            <p class="resultGoalsAdversary1" style="margin-bottom: 12px;"></p>            
+            <p class="resultGoalsAdversary2"></p>            
           </div>
         </div>
       </div>
