Improve and comment code

--- a/src/main.html
+++ b/src/main.html
@@ -59,19 +59,19 @@
         <div class="container">
           <div class="total-score-div">
             <p class="obj">Pontos totais:</p>
-            <p class="result">78</p> <!--pontos totais-->
+            <p class="result"></p> <!--pontos totais-->
           </div>
           <div class="goals-made-div">
             <p class="obj">Gols feitos:</p>
-            <p class="result">62</p> <!--gols feitos-->
+            <p class="result"></p> <!--gols feitos-->
           </div>
           <div class="goals-taken-div">
             <p class="obj">Gols sofridos:</p>
-            <p class="result">24</p> <!--gols sofridos-->
+            <p class="result"></p> <!--gols sofridos-->
           </div>
           <div class="manager-div">
             <p class="obj">Saldo geral:</p>
-            <p class="result">38</p> <!--gols feitos - sofridos-->
+            <p class="result"></p> <!--gols feitos - sofridos-->
           </div>
         </div>
       </div>
@@ -110,20 +110,7 @@
                 <th>Saldo de gols</th>
               </tr>
             </thead>
-            <tbody id="tbody-result">
-              <tr>
-                <td>1º</td> <!--colocação-->
-                <td>Vasco</td> <!--clube-->
-                <td>78</td> <!--pontos totais-->
-                <td>38</td> <!--jogos totais: fixo, sempre são 38 ao final do campeonato-->
-                <td>24</td> <!--vitorias-->
-                <td>6</td> <!--empates-->
-                <td>8</td> <!--derrotas-->
-                <td>62</td> <!--gols feitos-->
-                <td>24</td> <!--gols sofridos-->
-                <td>+38</td> <!--gols feitos - gols sofridos-->
-              </tr>
-            </tbody>
+            <tbody id="tbody-result"></tbody> <!--Table lines is added in main.js-->
           </table>
         </div>
       </div>
