--- a/src/main.html
+++ b/src/main.html
@@ -64,7 +64,7 @@
             <p class="obj">Gols sofridos:</p>
             <p class="result"></p> <!--gols sofridos-->
           </div>
-          <div class="manager-div">
+          <div class="total-goals-div">
             <p class="obj">Saldo geral:</p>
             <p class="result"></p> <!--gols feitos - sofridos-->
           </div>
