:sparkles: add req to the db

--- a/src/main.html
+++ b/src/main.html
@@ -109,6 +109,6 @@
           </table>
         </div>
       </div>
-    <script src="main.js"></script>
-  </body>
+      <script type="module" src="main.js"></script>
+    </body>
 </html>
