--- a/src/main.html
+++ b/src/main.html
@@ -134,17 +134,12 @@
       </div>
 
       <div id="resultManager" style="display: none;">
-        <div class="container">AAAAAAAAAAAAA</div>
+        <div class="manager-div"><h2 id="selectedTeamManager" style="color: white; font-size: 36px;"></h2></div>
+        <div class="container manager"></div>
       </div>
       <div id="resultCards" style="display: none;">
-
-          <div class="cards-div">
-            <h2 id="selectedCard" style="color: white; font-size: 36px;"></h2>
-          </div>
-          <div class="container cards">
-
-          </div>
-
+        <div class="cards-div"><h2 id="selectedCard" style="color: white; font-size: 36px;"></h2></div>
+        <div class="container cards"></div>
       </div>
 
       <script type="module" src="main.js"></script>
