Add scroll to contaainer cards

--- a/src/main.html
+++ b/src/main.html
@@ -139,7 +139,7 @@
       </div>
       <div id="resultCards" style="display: none;">
         <div class="cards-div"><h2 id="selectedCard" style="color: white; font-size: 36px;"></h2></div>
-        <div class="container cards"></div>
+        <div class="container cards" style="max-height: 720px; overflow-y: scroll;"></div>
       </div>
 
       <script type="module" src="main.js"></script>
