--- a/src/main.html
+++ b/src/main.html
@@ -135,7 +135,7 @@
 
       <div id="resultManager" style="display: none;">
         <div class="manager-div"><h2 id="selectedTeamManager" style="color: white; font-size: 36px;"></h2></div>
-        <div class="container manager"></div>
+        <div class="container manager" style="max-height: 720px; overflow-y: scroll;"></div>
       </div>
       <div id="resultCards" style="display: none;">
         <div class="cards-div"><h2 id="selectedCard" style="color: white; font-size: 36px;"></h2></div>
